--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Fabian Maschewski
-	email = fmasche@github.com
+	email = f.maschewski@mail.de
 [alias]
     st = status
     s = status -sb
