feat: update vscode settings

--- a/VSCode/settings.json
+++ b/VSCode/settings.json
@@ -1,5 +1,5 @@
 {
-  "workbench.colorTheme": "Panda Syntax",
+  "workbench.colorTheme": "Dracula",
   "editor.fontFamily": "Dejavu Sans Mono",
   "editor.fontSize": 16,
   "editor.minimap.maxColumn": 80,
